# ansible-runner-wrapper

./: .gitattributes  .gitignore  .workflow-patcher.yml  README.md  README.rst  error_code_config.yml  noxconfig.py  pyproject.toml
.github/workflows/: build-and-publish.yml  cd.yml  check-release-tag.yml  checks.yml  dependency-update.yml  fast-tests.yml  gh-pages.yml  matrix-all.yml  matrix-exasol.yml  matrix-python.yml  matrix.yml  merge-gate.yml  pr-merge.yml  report.yml  slow-checks.yml
doc/: api.rst  conf.py  index.rst  user_guide.rst
doc/changes/: changelog.md  changes_0.2.0.md  changes_1.0.0.md  changes_1.0.1.md  changes_2.0.0.md  changes_3.0.0.md  changes_5.0.0.md  unreleased.md
exasol/ansible/: __init__.py  access.py  context.py  facts.py  inventory.py  playbook.py  repository.py  result.py  run_install_dependencies.py  runner.py  runner.py.rej  version.py
exasol/ansible/runner/: ansible_access.py  ansible_context_manager.py  ansible_repository.py  ansible_run_context.py  ansible_runner.py  dependency_installer.py  run_install_dependencies.py
exasol/ds/sandbox/lib/: config.py  dicts.py  logging.py  render_template.py
exasol/ds/sandbox/lib/setup_ec2/: run_install_dependencies.py
exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/: first_steps.ipynb  main_config.ipynb
exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/: 01_import_data.ipynb  02_s3_vs_reuters.ipynb  cloud_store_config.ipynb  s3_vs_setup.ipynb
exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/: data_abalone.ipynb  data_customer_support.ipynb  data_flights.ipynb  data_telescope.ipynb
test/: conftest.py
test/integration/: conftest.py  docker_utils.py  itest_ansible.py
test/resources/itest/: docker_playbook.yml
test/unit/: test_ansible.py  test_ansible_facts.py  test_ansible_runtime.py  test_inventory.py  test_package_init.py  test_repository.py  test_result.py  test_runner.py  unit_smoke_test.py
test/unit/ansible/: test_ansible_facts.py
test/unit/resources/conflict/directory_vs_file/: roles
test/unit/resources/simple/: playbook.yml
(+36 files in other folders)
