[project]
name = "exasol-ansible-runner-wrapper"
version = "0.1.0"
description = "Python wrapper for running Ansible"
authors = [
    {name = "Mykhailo Skliar", email = "mykhailo.skliar@exasol.com"},
    {name = "Exasol AG", email = "opensource@exasol.com"}
]
requires-python = ">=3.10,<4.0"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ['exasol', 'ansible_runner_wrapper']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"

]
dependencies = ["importlib-metadata (>=9.0.0,<10.0.0)"]

[dependency-groups]
dev = [
    "exasol-toolbox>=6.3.0,<7",
]

[tool.poetry]
requires-poetry = ">=2.3.0"
packages = [
    { include = "exasol" },
]
include = [
    "README.rst",
    "doc/changes/changelog.md",
    "LICENSE"
]

[poetry.urls]
repository = "https://github.com/exasol/ansible-runner-wrapper"
homepage = "https://github.com/exasol/ansible-runner-wrapper"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
# Switch to 15 after code has been added
fail_under = 0

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"
target-version = ["py310"]

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
ignore = []

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D", # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true

[tool.sonar]
projectKey = "com.exasol:ansible-runner-wrapper"
host.url = "https://sonarcloud.io"
organization = "exasol"
exclusions = "exasol/ansible_runner_wrapper/version.py"
